tests/snapshots/wire_contract__air_quality_eu.snap
---
source: tests/wire_contract.rs
expression: round_trip(&air_quality_eu())
---
{
  "aqi": 35,
  "category": {
    "standard": "Eu",
    "level": "Fair"
  },
  "pm2_5": 8.1,
  "pm10": 14.9,
  "ozone": 61.3,
  "nitrogen_dioxide": 9.4,
  "carbon_monoxide": 142.0,
  "aqi_source": "OpenMeteo"
}
