tests/snapshots/wire_contract__canary_temperature_unit.snap
---
source: tests/wire_contract.rs
expression: "json(&TemperatureUnit::Fahrenheit)"
---
"Fahrenheit"
