tests/snapshots/wire_contract__canary_weather_condition.snap
---
source: tests/wire_contract.rs
expression: "json(&WeatherCondition::PartlyCloudy)"
---
"PartlyCloudy"
