tests/snapshots/wire_contract__daily_forecast.snap
---
source: tests/wire_contract.rs
expression: round_trip(&daily_forecast())
---
{
  "date": "2026-06-11",
  "temp_max": 78.4,
  "temp_min": 58.1,
  "weathercode": 3,
  "condition": "Overcast",
  "windspeed_max": 14.2,
  "wind_direction": 305,
  "compass_direction": "NW",
  "precipitation_probability_max": 30,
  "sunrise": "2026-06-11T05:21",
  "sunset": "2026-06-11T20:29"
}
