tests/snapshots/wire_contract__detected_location.snap
---
source: tests/wire_contract.rs
expression: round_trip(&detected)
---
{
  "latitude": 45.52,
  "longitude": -122.68,
  "display_name": "Portland, United States",
  "country": "United States"
}
